# garbro-rs

./: README.md  Req.md  package.json
src/: App.css  App.tsx  api.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: backend.rs  lib.rs  main.rs
src/components/: FileExplorer.tsx  ImagePreviewPanel.tsx  Xp3OptionsDialog.tsx
